src/objects/CD_GMT_Category_Level_Details__c.object
<CustomObject>
    <fields>
        <fullName>Financial_plan__c</fullName>
        <label>Financial plan</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GMT_Category_IOD_OUT__c</fullName>
        <formula>GM_Category__r.GM_Category__r.Name</formula>
        <label>GMT Category IOD OUT</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GMT_PROD_CAT_DTL__c</fullName>
        <label>GMT_PROD_CAT_DTL</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GMT_Product_Name__c</fullName>
        <formula>Product_Name__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>GMT Product Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GMT_SubCategory_1_IOD_OUT__c</fullName>
        <formula>GM_SubCategory_1__r.GM_SubCategory1__r.Name</formula>
        <label>GMT SubCategory 1 IOD OUT</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GMT_SubCategory_2_IOD_OUT__c</fullName>
        <formula>GM_SubCategory_2__r.GM_SubCategory2__r.Name</formula>
        <label>GMT SubCategory 2 IOD OUT</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GMT_SubCategory_3_IOD_OUT__c</fullName>
        <formula>GM_SubCategory_3__r.GM_SubCategory3__r.Name</formula>
        <label>GMT SubCategory 3 IOD OUT</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GM_Category_Old__c</fullName>
        <label>GM Category_Old</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GM_Category__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>GM_Category</label>
        <referenceTo>CD_GMT_Product_Categories__c</referenceTo>
        <relationshipLabel>CD GMT Category Level Details (GM_Category_New__c)</relationshipLabel>
        <relationshipName>CD_GMT_Category_Level_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GM_SubCategory_1_OLD__c</fullName>
        <label>GM SubCategory 1 OLD</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GM_SubCategory_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>GM SubCategory 1</label>
        <referenceTo>CD_GMT_Product_Categories__c</referenceTo>
        <relationshipLabel>CD GMT Category Level Details (GM SubCategory 1)</relationshipLabel>
        <relationshipName>CD_GMT_Category_Level_Details1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GM_SubCategory_2_OLD__c</fullName>
        <label>GM SubCategory 2 OLD</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GM_SubCategory_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>GM SubCategory 2</label>
        <referenceTo>CD_GMT_Product_Categories__c</referenceTo>
        <relationshipLabel>CD GMT Category Level Details (GM SubCategory 2)</relationshipLabel>
        <relationshipName>CD_GMT_Category_Level_Details2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GM_SubCategory_3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>GM SubCategory 3</label>
        <referenceTo>CD_GMT_Product_Categories__c</referenceTo>
        <relationshipLabel>CD GMT Category Level Details (GM SubCategory 3)</relationshipLabel>
        <relationshipName>CD_GMT_Category_Level_Details3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Gap_to_Plan__c</fullName>
        <label>Gap to Plan</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Gap_to_Target__c</fullName>
        <label>Gap to Target</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LE_BOM_Cost_Value__c</fullName>
        <label>LE - BOM Cost Value</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LE_Override_Value__c</fullName>
        <label>LE -Override Value</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Product_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product Name</label>
        <referenceTo>CD_GMT_ProductDetails__c</referenceTo>
        <relationshipLabel>CD GMT Category Level Details</relationshipLabel>
        <relationshipName>CD_GMT_Category_Level_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Quarter__c</fullName>
        <label>Quarter</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RO_Operational_plan_Value__c</fullName>
        <label>RO - Operational plan Value</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RO_Override_Value__c</fullName>
        <label>RO -Override Value</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Report_Date__c</fullName>
        <label>Report Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SBE_BOM_Cost_Value__c</fullName>
        <label>SBE - BOM Cost Value</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SBE_Override_Value__c</fullName>
        <label>SBE -Override Value</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Target__c</fullName>
        <label>Target</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Weight__c</fullName>
        <label>Weight</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Year__c</fullName>
        <label>Year</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>CD GMT Category Level Details</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>CD GMT Category Level Details Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CD GMT Category Level Details</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>